src/test/deca/context/valid/tests/THIS.deca
class Test {
    protected int bar = 0;
    void foo() {
        Test b = new Test();
        this.bar;
    }
}

{
    Test t = new Test();
    t.foo();
}
