src/test/deca/context/invalid/tests/METHOD-parameter-type.deca
class Foo {
    int init(int a, float b, Foo c) {
    }
}

{
    Foo x = new Foo();
    x.init(3.1, 3, new Foo());
}
